--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'application'
 }
 
 group = 'com.example'
@@ -33,4 +34,15 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+application {
+	mainClassName = 'com.example.to_do_list' // 메인 클래스 경로로 변경
+}
+
+shadowJar {
+	archiveBaseName.set('to-do-list')
+	archiveVersion.set('0.0.1-SNAPSHOT')
+	archiveClassifier.set('')
+	archiveClassifier.set('')
 }
