--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
 	id 'application'
+	id 'com.github.johnrengelman.shadow' version '8.1.0'
 }
 
 group = 'com.example'
