--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 spring.application.name=to-do-list
-server.port=8082
+server.port=8080
 
-# MySQL ?????? ?? ??
-spring.datasource.url=jdbc:mysql://localhost:3306/todo_db
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/todo?serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1234
 
+#encoding
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 
-# JPA ?? (??)
+#jpa
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=mysql
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
