--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/todo?serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root1234
 
 #encoding
 server.servlet.encoding.charset=UTF-8
