--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@ spring.application.name=to-do-list
 server.port=8080
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/todo?serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://10.0.2.15:3306/todo_db
 spring.datasource.username=root
-spring.datasource.password=root1234
+spring.datasource.password=1234
+
+
 
 #encoding
 server.servlet.encoding.charset=UTF-8
@@ -16,3 +18,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
+
+logging.level.org.springframework=DEBUG
